Adding the GCC Makefile that VS builds to Git
This makefile is auto-generated by Atmel Studio. We use it to compile
the project on Linux / Travis-CI. It must be updated every time the
project changes.

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 *.sln.docstates
 
 # Build results
-[Dd]ebug/
+[Dd]ebug/src/
+[Rr]elease/src/
 [Dd]ebugPublic/
-[Rr]elease/
 [Rr]eleases/
 x64/
 x86/
@@ -229,3 +229,14 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# Build artifacts
+*.bin
+*.hex
+*.srec
+*.map
+*.elf
+*.eep
+*.lss
+
+EVAL/EVAL/Debug/src/
