--- a/devkit/app.uvprojx
+++ b/devkit/app.uvprojx
@@ -467,6 +467,11 @@
               <FileType>1</FileType>
               <FilePath>.\app\src\i2c.c</FilePath>
             </File>
+            <File>
+              <FileName>spi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\app\src\spi.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -506,6 +511,11 @@
               <FileName>i2c.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\app\inc\i2c.h</FilePath>
+            </File>
+            <File>
+              <FileName>spi.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\app\inc\spi.h</FilePath>
             </File>
           </Files>
         </Group>
