--- a/devkit/app.uvprojx
+++ b/devkit/app.uvprojx
@@ -447,6 +447,11 @@
               <FileType>1</FileType>
               <FilePath>.\app\src\console.c</FilePath>
             </File>
+            <File>
+              <FileName>debug.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\app\src\debug.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -481,6 +486,11 @@
               <FileName>console.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\app\inc\console.h</FilePath>
+            </File>
+            <File>
+              <FileName>debug.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\app\inc\debug.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -1292,6 +1302,11 @@
               <FileType>1</FileType>
               <FilePath>.\app\src\i2c.c</FilePath>
             </File>
+            <File>
+              <FileName>uart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\app\src\uart.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1311,6 +1326,11 @@
               <FileName>spi.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\app\inc\spi.h</FilePath>
+            </File>
+            <File>
+              <FileName>uart.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\app\inc\uart.h</FilePath>
             </File>
           </Files>
         </Group>
