--- a/devkit/app.uvprojx
+++ b/devkit/app.uvprojx
@@ -10,11 +10,12 @@
       <TargetName>devkit</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
+      <pCCUsed>5060061::V5.06 update 1 (build 61)::ARMCC</pCCUsed>
       <TargetOption>
         <TargetCommonOption>
           <Device>STM32L053C8</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32L0xx_DFP.1.3.0</PackID>
+          <PackID>Keil.STM32L0xx_DFP.1.4.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IROM(0x08000000,0x10000) IRAM(0x20000000,0x2000) CPUTYPE("Cortex-M0+") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -229,6 +230,7 @@
             <useUlib>0</useUlib>
             <EndSel>0</EndSel>
             <uLtcg>0</uLtcg>
+            <nSecure>0</nSecure>
             <RoSelD>3</RoSelD>
             <RwSelD>3</RwSelD>
             <CodeSel>0</CodeSel>
@@ -365,9 +367,11 @@
             <useXO>0</useXO>
             <v6Lang>0</v6Lang>
             <v6LangP>0</v6LangP>
+            <vShortEn>0</vShortEn>
+            <vShortWch>0</vShortWch>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define></Define>
+              <Define>DANDELION, RADIO_DRIVER_EXTENDED_SUPPORT, RADIO_DRIVER_FULL_SUPPORT</Define>
               <Undefine></Undefine>
               <IncludePath>.\app\inc;.\support\FreeRTOS\include;.\support\HAL\Inc;.\support\STM32_USB_Device_Library\Class\CustomHID\Inc;.\support\STM32_USB_Device_Library\Core\Inc;.\support\FreeRTOS\CMSIS_RTOS;.\support\FreeRTOS\portable\Keil;.\app\conf;.\support\FreeRTOS\portable\RVDS\ARM_CM0;.\support\xbee_ansi\inc;.\common\inc;.\support\Si4463\drivers\radio\Si446x;.\support\Si4463\drivers\radio;.\cross-platform\inc</IncludePath>
             </VariousControls>
@@ -462,6 +466,11 @@
               <FileType>1</FileType>
               <FilePath>.\app\src\fw_update.c</FilePath>
             </File>
+            <File>
+              <FileName>power.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\app\src\power.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -506,6 +515,11 @@
               <FileName>fw_update.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\app\inc\fw_update.h</FilePath>
+            </File>
+            <File>
+              <FileName>power.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\app\inc\power.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -1192,6 +1206,11 @@
               <FileType>1</FileType>
               <FilePath>.\app\conf\system_stm32l0xx.c</FilePath>
             </File>
+            <File>
+              <FileName>radio_config.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\app\conf\radio_config.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1357,6 +1376,8 @@
                     <useXO>2</useXO>
                     <v6Lang>0</v6Lang>
                     <v6LangP>0</v6LangP>
+                    <vShortEn>0</vShortEn>
+                    <vShortWch>0</vShortWch>
                     <VariousControls>
                       <MiscControls></MiscControls>
                       <Define></Define>
